--- a/poster.tex
+++ b/poster.tex
@@ -11,7 +11,7 @@
 \usepackage{lmodern}
 \usepackage[size=custom,width=120,height=72,scale=1.0]{beamerposter}
 \usetheme{gemini}
-\usecolortheme{gemini}
+\usecolortheme{btu}
 \usepackage{graphicx}
 \usepackage{booktabs}
 \usepackage{tikz}
@@ -57,8 +57,7 @@
 % ====================
 
 % use this to include logos on the left and/or right side of the header:
-% \logoright{\includegraphics[height=7cm]{logo1.pdf}}
-% \logoleft{\includegraphics[height=7cm]{logo2.pdf}}
+	\logoright{\includegraphics[height=6.0cm,trim={0 25 0 25},clip]{logos/BTULogoStandardversionenglischWEISS.png}}
 
 % ====================
 % Body
